# api-core

./: .env.dev  .env.dev-sample  .env.prod-sample  .env.temp  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  config.yaml.template  demo.hurl  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yaml.template  entrypoint.prod.sh  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg
amedice/: asgi.py  settings.py
app/: .dockerignore  Dockerfile.prod  entrypoint.sh  manage.py  pytest.ini  requirements.txt
app/amedice/: config.py  settings.py  urls.py  wsgi.py
app/apps/catalog/: admin.py  models.py  serializers.py  urls.py  views.py
app/apps/doctors/: admin.py  models.py  (+3 more)
app/catalog/: admin.py  models.py  serializers.py  urls.py  views.py
app/doctors/: models.py  serializers.py  types.py  urls.py  views.py
app/organisations/: admin.py  api_parameters.py  apps.py  medical_types.py  models.py  schema_parameters.py  serializers.py  signals.py  types.py  urls.py  validators.py  views.py
app/reviews/: models.py
app/socials/: models.py  serializers.py  urls.py  views.py
app/spectacular/: auth_extension.py  backends.py
app/tests/: conftest.py
app/users/: apps.py  groups.py  models.py  permissions.py  serializers.py  urls.py  views.py
doctors/: serializers.py  urls.py
hurl/dev/: add_catalog.hurl  db_filling.hurl
hurl/test/: auth.hurl  organisations.hurl
nginx/: nginx.conf
organisations/: defaults.py  models.py  serializers.py  types.py  urls.py  views.py
spectacular/: auth_extension.py
users/: views.py
(+69 files in other folders)
